Fixed: Labels + mobile version small stuff

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -192,7 +192,7 @@ button:focus {
         overflow: hidden;
         text-overflow: ellipsis;
         transform-origin: left bottom;
-        transform: translate(0, 2.125rem) scale(1.2);
+        transform: translate(0, 1.8rem) scale(1.2);
       }
       ::-webkit-input-placeholder {
         opacity: 0;
@@ -282,7 +282,7 @@ button:focus {
         overflow: hidden;
         text-overflow: ellipsis;
         transform-origin: left bottom;
-        transform: translate(0, 2.125rem) scale(1.2);
+        transform: translate(0, 1.8rem) scale(1.2);
       }
       ::-webkit-input-placeholder {
         opacity: 0;
@@ -714,9 +714,6 @@ button:focus {
         margin-bottom: 0px;
         margin-top: 15px;
         width: 100%;
-      }
-      .whoswName {
-        font-size: 14px;
       }
       form {
         button {
@@ -2093,14 +2090,6 @@ Keyframes for border radius header image
   }
   .statistiOfAnimals {
     margin-top: 20px;
-    // .statisticDiagram {
-    //   height: 150px;
-    //   width: 100%;
-    //   border: 1px solid black;
-    //   margin: auto;
-    //   margin-top: 20px;
-    //   margin-bottom: 20px;
-    // }
     #curve_chart {
       width: 100%;
       height: 200px;
@@ -2240,30 +2229,6 @@ Keyframes for border radius header image
           left: 5vw;
           height: 20px;
         }
-        // div:nth-child(1) {
-        //   width: 30px;
-        //   top: 18vh;
-        //   right: 20vw;
-        //   height: 30px;
-        // }
-        // div:nth-child(2) {
-        //   width: 15px;
-        //   top: 15vh;
-        //   right: 15vw;
-        //   height: 15px;
-        // }
-        // div:nth-child(3) {
-        //   width: 13px;
-        //   top: 30vh;
-        //   right: 20vw;
-        //   height: 13px;
-        // }
-        // div:nth-child(4) {
-        //   width: 15px;
-        //   top: 25vh;
-        //   left: 20vw;
-        //   height: 15px;
-        // }
       }
       .introCat {
         top: 320px;
@@ -2409,9 +2374,9 @@ Keyframes for border radius header image
     #signupForm,
     #donationForm,
     #stuffDonationForm {
-      margin: 50px;
+      margin: 10vw;
       padding: 40px;
-      border-radius: h2 {
+      h2 {
         font-size: 20px;
         margin-top: 0px;
       }
@@ -2622,9 +2587,12 @@ Keyframes for border radius header image
   /* ----------------------
         Signed in page
 -----------------------*/
-#loginForm{
-  width: 62vw;
-}
+  #loginForm {
+    width: 100vw;
+    form {
+      width: 100%;
+    }
+  }
 
   #signedInContent {
     #userSettings,
@@ -2769,6 +2737,7 @@ Keyframes for border radius header image
       .catchphrase {
         text-align: center;
         h1 {
+          padding-top: 65px;
           font-size: 10vw;
           span {
             font-size: 15vw;
@@ -2891,7 +2860,7 @@ Keyframes for border radius header image
 
   // here comes the footer
   #footer {
-    padding: 30px 30px 100px 30px;
+    padding: 30px 10vw 100px 10vw;
     grid-template-columns: 1fr;
 
     #subscribeForm {
